# vizer-cli-fork

./: Cargo.toml
src/: episode.rs  main.rs  media.rs  quit.rs  season.rs
src/back_end/: click_element.rs  episode.rs  get_medias.rs  get_video_url.rs  is_offline.rs  media.rs  mod.rs  play_video.rs  season.rs  start_driver.rs
src/cli/: choose_lang.rs  menu.rs  mod.rs
src/driver/: click_element.rs  manage_driver.rs  mod.rs
src/front_end/: mod.rs  ui.rs  window.rs
src/fs/: temp_dir.rs
src/full_stack/: language.rs  mod.rs  sdl_events.rs
src/player/: media_player.rs  mod.rs  watch_media.rs
